--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+### GITHUB AUTOMATIC GITIGNORE FOR C ###
+
 # Prerequisites
 *.d
 
@@ -50,3 +52,28 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+
+
+### Created by https://www.toptal.com/developers/gitignore/api/vim ###
+
+### Vim ###
+# Swap
+[._]*.s[a-v][a-z]
+!*.svg  # comment out if you don't need vector files
+[._]*.sw[a-p]
+[._]s[a-rt-v][a-z]
+[._]ss[a-gi-z]
+[._]sw[a-p]
+
+# Session
+Session.vim
+Sessionx.vim
+
+# Temporary
+.netrwhist
+*~
+# Auto-generated tag files
+tags
+# Persistent undo
+[._]*.un~
